airflow/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: causality
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-scheduler
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:
      serviceAccountName: airflow
      containers:
        - name: airflow-scheduler
          image: ghcr.io/causality-africa/collector:v0.1.3
          command: ["airflow", "scheduler"]
          volumeMounts:
            - name: pod-template
              mountPath: /opt/airflow/pod_template.yaml
              subPath: pod_template.yaml
            - name: dags-volume
              mountPath: /opt/airflow/dags
        - name: git-sync
          image: registry.k8s.io/git-sync/git-sync:v3.6.9
          volumeMounts:
            - name: dags-volume
              mountPath: /dags
      volumes:
        - name: pod-template
          configMap:
            name: airflow-pod-template
        - name: dags-volume
          persistentVolumeClaim:
            claimName: airflow-dags-pvc
