airflow/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: causality
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-webserver
  template:
    metadata:
      labels:
        app: airflow-webserver
    spec:
      containers:
        - name: airflow-webserver
          image: apache/airflow:2.10.5
          ports:
            - containerPort: 8080
          command: ["airflow", "webserver"]
          volumeMounts:
            - name: pod-template
              mountPath: /opt/airflow/pod_template.yaml
              subPath: pod_template.yaml
            - name: dags-volume
              mountPath: /opt/airflow/dags
      volumes:
        - name: pod-template
          configMap:
            name: airflow-pod-template
        - name: dags-volume
          persistentVolumeClaim:
            claimName: airflow-dags-pvc
