airflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver-svc
  namespace: causality
spec:
  type: ClusterIP
  selector:
    app: airflow-webserver
  ports:
    - port: 8080
      targetPort: 8080
